sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:8: error: not found: value tab
      if (tab(i)>tab(i+1)){
          ^AlgBubbleSort3:8: error: not found: value tab
      if (tab(i)>tab(i+1)){
                 ^AlgBubbleSort3:9: error: not found: value tab
        val temp = tab(i)
                   ^AlgBubbleSort3:10: error: not found: value tab
        tab(i)=tab(i+1)
        ^AlgBubbleSort3:10: error: not found: value tab
        tab(i)=tab(i+1)
               ^AlgBubbleSort3:11: error: not found: value tab
        tab(i+1)=temp
        ^