sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.code
def bubbleSort3() {
  var switch:Boolean=true

	while (switch) {
    switch = false
    for(i<-0 to getNombreValeurs()-2){
      if (tab(i)>tab(i+1)){
        val temp = tab(i)
        tab(i)=tab(i+1)
        tab(i+1)=temp
        switch=true
      }
    }
  }
   
}